--- a/mobile/app/src/main/res/layout/recycleview_new_item.xml
+++ b/mobile/app/src/main/res/layout/recycleview_new_item.xml
@@ -54,14 +54,12 @@
         android:layout_marginLeft="5dp"
         android:layout_below="@id/harga_sebelum_diskon"/>
 
-    <Button
-        android:id="@+id/beli"
-        android:layout_width="match_parent"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        android:textColor="#fff"
-        android:textStyle="bold"
-        android:text="Beli"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:layout_below="@id/diskon"/>
+        android:padding="5dp"
+        android:background="@color/colorSecondary"
+        android:textColor="@color/text"
+        android:textSize="10dp"
+        android:text="NEW"/>
 </RelativeLayout>
