--- a/mobile/app/src/main/res/layout/recycleview_top_item.xml
+++ b/mobile/app/src/main/res/layout/recycleview_top_item.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:background="#fff"
-    android:layout_width="match_parent"
+    android:layout_width="150dp"
     android:layout_height="wrap_content"
     android:layout_margin="1dp"
     android:paddingTop="@dimen/activity_vertical_margin"
@@ -48,21 +48,9 @@
 
     <TextView
         android:id="@+id/diskon"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="-20%"
         android:layout_marginLeft="5dp"
-        android:layout_below="@id/harga_sesudah_diskon"
-        android:layout_toRightOf="@id/harga_sebelum_diskon"/>
-
-    <Button
-        android:id="@+id/beli"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        android:textColor="#fff"
-        android:textStyle="bold"
-        android:text="Beli"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
         android:layout_below="@id/harga_sebelum_diskon"/>
 </RelativeLayout>
