--- a/mobile/app/src/main/res/layout/recycleview_item.xml
+++ b/mobile/app/src/main/res/layout/recycleview_item.xml
@@ -29,22 +29,13 @@
         android:layout_below="@id/gambar"/>
 
     <TextView
-        android:id="@+id/harga_sesudah_diskon"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="#000"
-        android:textStyle="bold"
-        android:layout_below="@id/barang"
-        android:text="Harga"/>
-
-    <TextView
         android:id="@+id/harga_sebelum_diskon"
         android:background="@drawable/strikethrough"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:text="harga"
-        android:layout_below="@id/harga_sesudah_diskon"/>
+        android:layout_below="@id/barang"/>
 
     <TextView
         android:id="@+id/diskon"
@@ -52,8 +43,17 @@
         android:layout_height="wrap_content"
         android:text="-20%"
         android:layout_marginLeft="5dp"
-        android:layout_below="@id/harga_sesudah_diskon"
+        android:layout_below="@id/barang"
         android:layout_toRightOf="@id/harga_sebelum_diskon"/>
+
+    <TextView
+        android:id="@+id/harga_sesudah_diskon"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/colorSecondary"
+        android:textStyle="bold"
+        android:layout_below="@id/harga_sebelum_diskon"
+        android:text="Harga"/>
 
     <Button
         android:id="@+id/beli"
@@ -64,5 +64,5 @@
         android:textStyle="bold"
         android:text="Beli"
         android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:layout_below="@id/harga_sebelum_diskon"/>
+        android:layout_below="@id/harga_sesudah_diskon"/>
 </RelativeLayout>
