--- a/mobile/app/src/main/res/layout/content_homepage_new_item.xml
+++ b/mobile/app/src/main/res/layout/content_homepage_new_item.xml
@@ -3,7 +3,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/activity_vertical_margin">
+    android:layout_marginTop="@dimen/activity_vertical_margin"
+    android:id="@+id/content_homepage_new_item">
 
     <TextView
         android:layout_width="match_parent"
