--- a/mobile/app/src/main/res/layout/fragment_favorite.xml
+++ b/mobile/app/src/main/res/layout/fragment_favorite.xml
@@ -1,13 +1,27 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.example.you.onlineshop.Fragment.FavoriteFragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.you.onlineshop.Fragment.FavoriteFragment">
+    android:layout_height="match_parent">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent">
 
-</FrameLayout>
+        <LinearLayout
+            android:id="@+id/content_success"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <include layout="@layout/content_favorite_list"/>
+            <include layout="@layout/content_favorite_empty"/>
+        </LinearLayout>
+
+        <include layout="@layout/content_loading"/>
+        <include layout="@layout/content_error"/>
+    </LinearLayout>
+
+</ScrollView>
