Edit tampilan keranjang

--- a/mobile/app/src/main/res/layout/content_homepage_top_item.xml
+++ b/mobile/app/src/main/res/layout/content_homepage_top_item.xml
@@ -17,10 +17,7 @@
         android:textSize="15dp"
         android:text="Barang Terlaris" />
 
-    <TextView
-        android:layout_height="1dp"
-        android:layout_width="match_parent"
-        android:background="@color/colorDivider"/>
+    <include layout="@layout/content_divider"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_top_item"
