--- a/mobile/app/src/main/res/layout/content_toolbar.xml
+++ b/mobile/app/src/main/res/layout/content_toolbar.xml
@@ -12,8 +12,9 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
+        android:layout_height="?android:actionBarSize"
+        android:background="@color/colorPrimary"
+        app:layout_scrollFlags="scroll"
         app:popupTheme="@style/AppTheme.PopupOverlay">
 
     </android.support.v7.widget.Toolbar>
