--- a/mobile/app/src/main/res/layout/fragment_keranjang.xml
+++ b/mobile/app/src/main/res/layout/fragment_keranjang.xml
@@ -1,13 +1,20 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.you.onlineshop.Fragment.KeranjangFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
+        android:id="@+id/content_success"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent">
 
-</FrameLayout>
+        <include layout="@layout/content_keranjang_list"/>
+        <include layout="@layout/content_keranjang_empty"/>
+    </LinearLayout>
+
+    <include layout="@layout/content_loading"/>
+    <include layout="@layout/content_error"/>
+</LinearLayout>
