--- a/mobile/app/src/main/res/layout/content_homepage_new_item.xml
+++ b/mobile/app/src/main/res/layout/content_homepage_new_item.xml
@@ -18,10 +18,7 @@
         android:textSize="15dp"
         android:text="Barang Terbaru" />
 
-    <TextView
-        android:layout_height="1dp"
-        android:layout_width="match_parent"
-        android:background="@color/colorDivider"/>
+    <include layout="@layout/content_divider"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_new_item"
