--- a/mobile/app/src/main/res/layout/recycleview_item.xml
+++ b/mobile/app/src/main/res/layout/recycleview_item.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:background="@color/text"
     android:layout_width="match_parent"
@@ -55,14 +54,10 @@
         android:layout_below="@id/harga_sebelum_diskon"
         android:text="Harga"/>
 
-    <Button
-        android:id="@+id/beli"
+    <include layout="@layout/button_beli"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorSecondary"
-        android:textColor="@color/text"
-        android:textStyle="bold"
-        android:text="Beli"
         android:layout_marginTop="@dimen/activity_vertical_margin"
         android:layout_below="@id/harga_sesudah_diskon"/>
+
 </RelativeLayout>
