--- a/mobile/app/src/main/res/layout/recycleview_keranjang.xml
+++ b/mobile/app/src/main/res/layout/recycleview_keranjang.xml
@@ -20,8 +20,8 @@
             android:padding="16dp"
             android:id="@+id/item_name"/>
 
-        <ImageView android:id="@+id/btn_remove"
-            app:srcCompat="@drawable/ic_delete_24dp"
+        <ImageView android:id="@+id/btn_edit"
+            app:srcCompat="@drawable/ic_create_black_24dp"
             android:tint="@color/colorSecondary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
