--- a/mobile/app/src/main/res/layout/activity_add_address.xml
+++ b/mobile/app/src/main/res/layout/activity_add_address.xml
@@ -56,6 +56,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:text="Simpan"/>
+        android:text="Simpan"
+        android:id="@+id/btn_simpan"/>
 
 </LinearLayout>
