--- a/mobile/app/src/main/res/layout/activity_address.xml
+++ b/mobile/app/src/main/res/layout/activity_address.xml
@@ -10,4 +10,6 @@
         android:id="@+id/rv_list_address"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
+    <include layout="@layout/content_display_error_and_loading"/>
 </LinearLayout>
