--- a/mobile/app/src/main/res/layout/activity_order.xml
+++ b/mobile/app/src/main/res/layout/activity_order.xml
@@ -1,186 +1,194 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-    <LinearLayout
+    <include layout="@layout/toolbar_order"/>
+    <include layout="@layout/content_display_error_and_loading"/>
+
+    <ScrollView android:id="@+id/content_success"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-        android:orientation="vertical">
-
-        <include layout="@layout/toolbar_order"/>
+        android:layout_height="match_parent">
 
         <LinearLayout android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="16dp"
-            android:background="@color/text">
+            android:layout_height="wrap_content">
 
-            <LinearLayout
+            <LinearLayout android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:paddingBottom="16dp"
+                android:background="@color/text">
 
-                <ImageView
-                    android:tint="@color/colorSecondary"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <ImageView
+                        android:tint="@color/colorSecondary"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:srcCompat="@drawable/ic_place_black_24dp"
+                        android:padding="16dp"/>
+
+                    <TextView android:text="Alamat Penerima"
+                        android:textColor="@color/colorSecondary"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:paddingTop="16dp"
+                        android:paddingBottom="16dp"
+                        android:layout_height="wrap_content" />
+
+                    <TextView android:text="Ganti"
+                        android:id="@+id/btn_address"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="16dp" />
+
+                </LinearLayout>
+
+                <TextView android:text="Jalan Bambu II No 5-72 E"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/ic_place_black_24dp"
-                    android:padding="16dp"/>
+                    android:textColor="@color/textPrimary"
+                    android:textStyle="bold"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
+                    android:id="@+id/address"/>
 
-                <TextView android:text="Alamat Penerima"
-                    android:textColor="@color/colorSecondary"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:padding="16dp"
-                    android:layout_height="wrap_content" />
+                <TextView android:text="Nama Penerima"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
+                    android:id="@+id/name"/>
 
-                <TextView android:text="Ganti"
-                    android:layout_width="wrap_content"
-                    android:padding="16dp"
-                    android:layout_height="wrap_content" />
+                <TextView android:text="087768114297"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
+                    android:id="@+id/number"/>
+
+                <TextView android:text="Sumatera Utara, Kota Medan, Medan Timur"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
+                    android:id="@+id/city"/>
+
+                <TextView android:text="20235"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
+                    android:id="@+id/poscode"/>
             </LinearLayout>
 
-            <TextView android:text="Jalan Bambu II No 5-72 E"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="@color/textPrimary"
-                android:textStyle="bold"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                android:id="@+id/address"/>
+            <include layout="@layout/content_divider"/>
 
-            <TextView android:text="Nama Penerima"
+            <LinearLayout android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                android:id="@+id/name"/>
+                android:paddingBottom="16dp"
+                android:background="@color/text">
 
-            <TextView android:text="087768114297"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                android:id="@+id/number"/>
+                <TextView
+                    android:padding="16dp"
+                    android:text="Order"
+                    android:textColor="@color/colorSecondary"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
 
-            <TextView android:text="Sumatera Utara, Kota Medan, Medan Timur"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                android:id="@+id/city"/>
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rv_order"
+                    android:nestedScrollingEnabled="false"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
 
-            <TextView android:text="20235"
+            <include layout="@layout/content_divider"/>
+
+            <LinearLayout android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                android:id="@+id/poscode"/>
+                android:background="@color/text">
+
+                <TextView android:text="Total Pembayaran"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:padding="16dp"
+                    android:textStyle="bold"
+                    android:textColor="@color/textPrimary" />
+
+                <TextView android:text="Rp. 000,-"
+                    android:id="@+id/total_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="16dp"
+                    android:textColor="@color/colorSecondary" />
+
+            </LinearLayout>
+
+            <include layout="@layout/content_divider"/>
+
+            <LinearLayout android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/text">
+
+                <TextView android:text="Payment Method"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:padding="16dp"
+                    android:textStyle="bold"
+                    android:textColor="@color/textPrimary" />
+
+                <TextView android:text="Transfer"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="16dp"
+                    android:textColor="@color/colorSecondary" />
+            </LinearLayout>
+
+
+            <include layout="@layout/content_divider"/>
+
+            <LinearLayout android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/text">
+
+                <TextView android:text="Silakan men-transfer sejumlah uang yang telah tertera diatas ke virtual account yang akan digenerate dibawah ini."
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="16dp"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"/>
+
+                <TextView android:text="012-559180912"
+                    android:textColor="@color/colorSecondary"
+                    android:textStyle="bold"
+                    android:textAlignment="center"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="16dp"/>
+            </LinearLayout>
+
+            <include layout="@layout/content_divider"/>
+
+            <Button android:id="@+id/btn_transaksi"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:background="@color/colorSecondary"
+                android:textColor="@color/text"
+                android:text="Transaksi"/>
         </LinearLayout>
-
-        <include layout="@layout/content_divider"/>
-
-        <LinearLayout android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="16dp"
-            android:background="@color/text">
-
-            <TextView
-                android:padding="16dp"
-                android:text="Order"
-                android:textColor="@color/colorSecondary"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/rv_order"
-                android:nestedScrollingEnabled="false"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-        </LinearLayout>
-
-        <include layout="@layout/content_divider"/>
-
-        <LinearLayout android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/text">
-
-            <TextView android:text="Total Pembayaran"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:padding="16dp"
-                android:textStyle="bold"
-                android:textColor="@color/textPrimary" />
-
-            <TextView android:text="Rp. 000,-"
-                android:id="@+id/total_price"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="16dp"
-                android:textColor="@color/colorSecondary" />
-
-        </LinearLayout>
-
-        <include layout="@layout/content_divider"/>
-
-        <LinearLayout android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/text">
-
-            <TextView android:text="Payment Method"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:padding="16dp"
-                android:textStyle="bold"
-                android:textColor="@color/textPrimary" />
-
-            <TextView android:text="Transfer"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="16dp"
-                android:textColor="@color/colorSecondary" />
-        </LinearLayout>
-
-
-        <include layout="@layout/content_divider"/>
-
-        <LinearLayout android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/text">
-
-            <TextView android:text="Silakan men-transfer sejumlah uang yang telah tertera diatas ke virtual account yang akan digenerate dibawah ini."
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingTop="16dp"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"/>
-
-            <TextView android:text="012-559180912"
-                android:textColor="@color/colorSecondary"
-                android:textStyle="bold"
-                android:textAlignment="center"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="16dp"/>
-        </LinearLayout>
-
-        <include layout="@layout/content_divider"/>
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:background="@color/colorSecondary"
-            android:textColor="@color/text"
-            android:text="Transaksi"/>
-    </LinearLayout>
-</ScrollView>
+    </ScrollView>
+</LinearLayout>
 
