--- a/mobile/app/src/main/res/layout/toolbar_transaction_detail.xml
+++ b/mobile/app/src/main/res/layout/toolbar_transaction_detail.xml
@@ -26,23 +26,12 @@
 
         <TextView
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:padding="16dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:textSize="15sp"
             android:textStyle="bold"
             android:gravity="center|left"
-            android:text="Pilih Alamat"
+            android:text="Transaksi Detail"
             android:textColor="@color/text"/>
-
-        <ImageView android:id="@+id/btn_add"
-            app:srcCompat="@drawable/ic_add_black_24dp"
-            android:tint="@color/text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingTop="@dimen/activity_vertical_margin"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingBottom="@dimen/activity_vertical_margin"/>
     </LinearLayout>
 </android.support.v7.widget.Toolbar>
